add authUser by id

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-SECRETJWT="pepe"
+SECRETJWT="!3sf34sfg504psmadmv-asdsad?>123@#$%^!@ASD&%#!@^%SDAS%VC;sda's;-2-2--"
 DATABASE="expensemanager"
 USERNAME="root"
 PASSWORD=""
