--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
+    "node-cron": "^3.0.3",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
   },
@@ -32,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.5",
+    "@types/node-cron": "^3.0.11",
     "nodemon": "^3.0.3",
     "rimraf": "^5.0.7",
     "ts-node-dev": "^2.0.0",
