resolve error on estructure debts

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DATABASE="expensemanager"
 USERNAME="root"
 PASSWORD=""
 HOST="localhost"
+EMAILNOTIFY="expensemanager12345@gmail.com"
+PASSWORDEMAIL="Portugal1091"
