--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.9.2",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14",
     "sequelize": "^6.37.1",
     "sqlite3": "^5.1.7"
   },
@@ -34,6 +35,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.14.5",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.15",
     "nodemon": "^3.0.3",
     "rimraf": "^5.0.7",
     "ts-node-dev": "^2.0.0",
