change credential and add password app

--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ DATABASE="expensemanager"
 USERNAME="root"
 PASSWORD=""
 HOST="localhost"
-EMAILNOTIFY="expensemanager12345@gmail.com"
-PASSWORDEMAIL="Portugal1091"
+EMAILNOTIFY='finanSmart2024@gmail.com'
+PASSWORDEMAIL='bob b f h j d y w p d q w r t​​'
